[package]
name = "runescape"
version = "0.1.0"
authors = ["Mark Old <dlom234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.11.0", features = ["json"] }
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
pathfinding = "1.1.12"
ordered-float = "1.0.2"
itertools = "0.8.0"
num-traits = "0.2.8"
